fix: layout box spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,11 @@
 .fill-box {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
 @media only screen and (max-width: 720px) {
